2004-12-07  Raja R Harinath  <rharinath@novell.com>

	* configure.in: Set 'tar-pax' option for automake-1.9.

2004-12-07  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (uninstall): New.

2004-12-06  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Disable -Wcast-align on sparc.

Mon Dec 6 15:00:53 CET 2004 Paolo Molaro <lupus@ximian.com>

	* configure.in: add option to disable some features of
	the runtime to create a smaller binary.

2004-12-03  Raja R Harinath  <rharinath@novell.com>

	* configure.in (ENABLE_NUNIT_TESTS): New.
	* runtime/Makefile.am (check-local): Use it to disable nunit
	tests.  Ensure that the test dlls are always built, however.

2004-12-03  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (dist-hook): Ensure we use the 'default' profile.
	* mono/Makefile.am (HANDLES): New.  Disable 'handles' dir on Win32.
	(SUBDIRS): Use it.  Move 'cil' before 'metadata'.
	* runtime/Makefile.am (install-exec): Pass
	RUNTIME_HAS_CONSISTENT_GACDIR to the mcs/ build.

2004-12-01  Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* configure.in : Add a flag for systems which pass parameters in
	registers as well as the stack.

2004-11-30  Raja R Harinath  <rharinath@novell.com>

	* configure.in (AC_OUTPUT): Move runtime/Makefile to the end to
	workaround a bug in automake 1.7.x.
	* runtime/Makefile.am ($(symlinks)): Don't depend on config.status.

2004-11-27  Miguel de Icaza  <miguel@ximian.com>

	* configure.in: Removed support for configured-based bundles. 

2004-11-26  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am ($(symlinks)): Depend on config.status too.
	* configure.in (runtime/etc/mono/1.0/machine.config): Use custom
	command to create.
	(runtime/etc/mono/2.0/machine.config): Likewise.
	* Makefile.am (get-monolite-latest): Update to new style of
	handling the "basic" profile.

2004-11-25  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (all-local): Make mcs/ tree writeable if
	necessary.