@@ -25,17 +25,14 @@ DISTCLEANFILES= mono.pc mint.pc
 .PHONY: get-monolite-latest mcs-do-compiler-tests compiler-tests bootstrap-world
 
 # building with monolite
-mcsclassdir = $(mcs_topdir)/class
-monolitedir = $(mcsclassdir)/lib/basic
+mcslib = $(mcs_topdir)/class/lib
+monolite = $(mcslib)/monolite
 get-monolite-latest:
-	-rm -f $(monolitedir)/*.exe $(monolitedir)/*.dll
-	-rm -fr $(monolitedir)/monolite-*
-	cd $(monolitedir) && { wget -O- http://www.go-mono.com/daily/monolite-latest.tar.gz | gzip -d | tar xf - ; }
-	mv -f $(monolitedir)/monolite-*/*.exe $(monolitedir)/monolite-*/*.dll $(monolitedir)
-	rm -fr $(monolitedir)/monolite-*
-	cd $(mcsclassdir)/lib && { test ! -f basic.tar.gz || mv -f basic.tar.gz basic.tar.gz.old; }
-	cd $(mcsclassdir) && $(MAKE) lib/basic.tar.gz
-	-rm -f $(monolitedir)/*.exe $(monolitedir)/*.dll
+	-rm -fr $(mcslib)/monolite-*
+	test ! -d $(monolite) || test ! -d $(monolite).old || rm -fr $(monolite).old
+	test ! -d $(monolite) || mv -f $(monolite) $(monolite).old
+	cd $(mcslib) && { wget -O- http://www.go-mono.com/daily/monolite-latest.tar.gz | gzip -d | tar xf - ; }
+	cd $(mcslib) && mv -f monolite-* monolite
 
 compiler-tests:
 	cd runtime && $(MAKE) clean-local
